<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pantinicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coffee"
    tools:context=".activity_pantallaInicial">

    <ImageView
        android:id="@+id/imgnombre"
        android:layout_width="396dp"
        android:layout_height="233dp"
        android:contentDescription="@string/t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        app:srcCompat="@drawable/logo1_reservaya"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="352dp"
        android:layout_height="312dp"
        android:contentDescription="@string/t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        app:srcCompat="@drawable/logo2_reservaya"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:backgroundTint="@color/kio"
        android:text="@string/Ingreso"
        app:layout_constraintBottom_toTopOf="@+id/txttitulo"
        app:layout_constraintEnd_toStartOf="@+id/btregistro"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <TextView
        android:id="@+id/txtdescinst"
        android:layout_width="286dp"
        android:layout_height="78dp"
        android:layout_marginTop="20dp"
        android:text="@string/ddsc"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/iop"
        app:layout_constraintBottom_toTopOf="@+id/imglogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgnombre"
        app:layout_constraintVertical_bias="0.511" />

    <Button
        android:id="@+id/btregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/kio"
        android:text="@string/Registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Saludo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/c4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogo"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/txtslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="@color/kio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttitulo" />
</androidx.constraintlayout.widget.ConstraintLayout>