<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coffee"
    tools:context=".activity_pantallaInicial">

    <TextView
        android:id="@+id/txtsaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:shadowColor="#220B0B"
        android:text="@string/Saludo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#220B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_titulo" />

    <ImageView
        android:id="@+id/logo_titulo"
        android:layout_width="329dp"
        android:layout_height="336dp"
        android:layout_marginBottom="344dp"
        android:contentDescription="@string/t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo1_reservaya"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="371dp"
        android:layout_height="467dp"
        android:contentDescription="@string/t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@drawable/logo2_reservaya"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/txtdesc"
        android:layout_width="322dp"
        android:layout_height="74dp"
        android:text="@string/ddsc"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/kio"
        app:layout_constraintBottom_toBottomOf="@+id/logo_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/txtslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsaludo" />

    <Button
        android:id="@+id/btingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/kio"
        android:text="@string/Ingreso"
        app:layout_constraintBottom_toTopOf="@+id/txtsaludo"
        app:layout_constraintEnd_toStartOf="@+id/txtsaludo"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_titulo"
        app:layout_constraintVertical_bias="0.45"
        app:rippleColor="@color/kio"
        app:strokeColor="@color/kio" />

    <Button
        android:id="@+id/jbregistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/kio"
        android:text="@string/Registro"
        app:layout_constraintBottom_toTopOf="@+id/txtsaludo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btingresar"
        app:layout_constraintTop_toBottomOf="@+id/logo_titulo"
        app:layout_constraintVertical_bias="0.941" />
</androidx.constraintlayout.widget.ConstraintLayout>